--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ log4rs = "1.2.0"
 slint = "1.2.0"
 msgbox = "0.7.0"
 native-dialog = "0.6.4"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
+tokio = { version = "1.32.0", features = ["full"] }
+zip = "0.6.6"
+walkdir = "2.4.0"
 
 [build-dependencies]
 slint-build = "1.2.0"
