--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["full"] }
 zip = "0.6.6"
 walkdir = "2.4.0"
+byteorder = "1.4.3"
 
 [build-dependencies]
 slint-build = "1.2.0"
